# llp3

./: CMakeLists.txt  README.md  build.sh  file.txt  server.c
db/: out.txt
db/src/: initializer.c  initializer.h
db/src/filetools/: basic_file_manager.c  big_data_tools.c
db/src/filetools/include/: basic_file_manager.h  big_data_tools.h
db/src/generator/: empty_generator.c  empty_generator.h
db/src/interface/: basic_crud.c  crud_interface.c
db/src/interface/include/: basic_crud.h  configuration.h  crud_interface.h  signatures.h
db/src/ui/: interactive.c  interactive.h
db/src/ui/commands/: add_command.c  find_by_command.c  update_command.c
db/src/ui/commands/include/: add_command.h  find_by_command.h  update_command.h
db/src/ui/commands/tools/: string_tools.c  string_tools.h
parser/: common.c  lex.l  lex.yy.c  mongo.y  y.tab.c  y.tab.h
parser/include/: common.h  mongo.h  signatures.h
proto/: message.options  message.pb.c  message.pb.h  message.proto
proto/nanopb/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  pb.h  pb_encode.h
proto/nanopb/examples/conan_dependency/: conanfile.py
proto/nanopb/generator/: nanopb_generator.py
proto/nanopb/tests/site_scons/site_tools/: nanopb.py
